update services page

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -2,6 +2,10 @@
 import Button from '@components/ui/Button.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import { Icon } from 'astro-icon/components';
+import { Image } from 'astro:assets';
+
+// Content
+import newInstall from '../assets/images/IMG_3381.jpg';
 ---
 
 <BaseLayout>
@@ -36,9 +40,9 @@ import { Icon } from 'astro-icon/components';
     </div>
   </section>
 
-  <section class="bg-white dark:bg-stone-900">
-    <div class="mx-auto max-w-screen-xl px-4 py-8 sm:py-16 lg:px-6">
-      <div class="mb-8 max-w-screen-md lg:mb-16">
+  <section class="overflow-x-hidden text-center dark:bg-stone-900">
+    <div class="mx-auto max-w-screen-xl py-8 sm:py-16 md:px-4 lg:px-6">
+      <div class="mx-auto mb-16 max-w-screen-md">
         <h2
           class="mb-4 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white"
         >
@@ -55,101 +59,69 @@ import { Icon } from 'astro-icon/components';
           > trust us, you can too.
         </p>
       </div>
-      <div class="flex flex-col gap-12 max-sm:text-center">
-        <div>
-          <div
-            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-          >
-            <Icon
-              name="tabler:axe"
-              class="size-6 text-red-800 dark:text-red-300"
-            />
+      <div class="flex flex-col gap-12 md:text-left">
+        <!-- Card 1 odd -->
+        <div
+          data-type="card"
+          class="flex gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
+        >
+          <Image
+            src={newInstall}
+            alt="New install"
+            width="600"
+            class="rounded-xl shadow-lg max-sm:scale-[1.15] sm:max-md:-mt-12 md:-ml-20 md:max-w-[50%]"
+          />
+          <div class="flex flex-col max-md:items-center">
+            <div
+              class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+            >
+              <Icon
+                name="tabler:axe"
+                class="size-6 text-red-800 dark:text-red-300"
+              />
+            </div>
+
+            <h3 class="mb-2 text-2xl font-bold dark:text-white">
+              New Installs
+            </h3>
+            <p class="text-stone-500 dark:text-stone-400">
+              Bring fresh life to your home. We'll install the material and
+              finish of your choice.
+            </p>
           </div>
-          <h3 class="mb-2 text-xl font-bold dark:text-white">New Installs</h3>
-          <p class="text-stone-500 dark:text-stone-400">
-            Bring fresh life to your home. We'll install the material and finish
-            of your choice.
-          </p>
         </div>
-        <div>
-          <div
-            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-          >
-            <Icon
-              name="tabler:paint"
-              class="-ml-1 size-6 text-red-800 dark:text-red-300"
-            />
+        <!-- end card 1 -->
+        <!-- Card 2 even -->
+        <div
+          data-type="card"
+          class="flex flex-row-reverse gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
+        >
+          <Image
+            src={newInstall}
+            alt="New install"
+            width="600"
+            class="rounded-xl shadow-lg max-sm:scale-[1.15] sm:max-md:-mt-12 md:-mr-20 md:max-w-[50%]"
+          />
+          <div class="flex flex-col max-md:items-center">
+            <div
+              class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+            >
+              <Icon
+                name="tabler:axe"
+                class="size-6 text-red-800 dark:text-red-300"
+              />
+            </div>
+
+            <h3 class="mb-2 text-2xl font-bold dark:text-white">
+              New Installs
+            </h3>
+            <p class="text-stone-500 dark:text-stone-400">
+              Bring fresh life to your home. We'll install the material and
+              finish of your choice.
+            </p>
           </div>
-          <h3 class="mb-2 text-xl font-bold dark:text-white">Refinishing</h3>
-          <p class="text-stone-500 dark:text-stone-400">
-            Whether you need a maintenance coat or a full re-sand, we can make
-            your existing floors look good as new <u>without</u> making a huge mess.
-          </p>
         </div>
-        <div>
-          <div
-            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-          >
-            <Icon
-              name="tabler:bandage"
-              class="size-6 text-red-800 dark:text-red-300"
-            />
-          </div>
-          <h3 class="mb-2 text-xl font-bold dark:text-white">Repairs</h3>
-          <p class="text-stone-500 dark:text-stone-400">
-            Water damage? Damaged pre-finished hardwood floors? We can fix your
-            hardwood floors. You won't even know we were there.
-          </p>
-        </div>
-        <div>
-          <div
-            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-          >
-            <Icon
-              name="tabler:playlist-add"
-              class="-ml-1 size-6 text-red-800 dark:text-red-300"
-            />
-          </div>
-          <h3 class="mb-2 text-xl font-bold dark:text-white">
-            Additions & Extensions
-          </h3>
-          <p class="text-stone-500 dark:text-stone-400">
-            Want to extend your kitchen to the entire floor? We can lace-in new
-            installs with existing, making a seamless transition from old to
-            new.
-          </p>
-        </div>
-        <div>
-          <div
-            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-          >
-            <Icon
-              name="tabler:home-plus"
-              class="size-6 text-red-800 dark:text-red-300"
-            />
-          </div>
-          <h3 class="mb-2 text-xl font-bold dark:text-white">
-            New Construction
-          </h3>
-          <p class="text-stone-500 dark:text-stone-400">
-            We've worked with plenty of builders on new and custom homes.
-          </p>
-        </div>
-        <div>
-          <div
-            class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
-          >
-            <Icon
-              name="tabler:background"
-              class="size-6 text-red-800 dark:text-red-300"
-            />
-          </div>
-          <h3 class="mb-2 text-xl font-bold dark:text-white">Custom Inlays</h3>
-          <p class="text-stone-500 dark:text-stone-400">
-            If you have a special decorative elements, like borders or emblems,
-            we can make that happen.
-          </p>
-        </div>
+        <!-- end card 2 -->
       </div>
     </div>
   </section>
