--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -5,7 +5,8 @@ import { Icon } from 'astro-icon/components';
 import { Image } from 'astro:assets';
 
 // Content
-import newInstall from '../assets/images/kitchen-1.jpg';
+import newInstall from '../assets/images/installation.jpg';
+import stain from '../assets/images/staining2.jpeg';
 ---
 
 <BaseLayout>
@@ -97,7 +98,7 @@ import newInstall from '../assets/images/kitchen-1.jpg';
           class="flex flex-row-reverse items-center gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
         >
           <Image
-            src={newInstall}
+            src={stain}
             alt="Hardwood floor refinishing"
             width="600"
             class="rounded-xl shadow-lg max-sm:mb-12 max-sm:scale-[1.15] sm:max-md:-mt-12 md:-mr-20 md:max-w-[50%]"
