Finish services images

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -5,8 +5,12 @@ import { Icon } from 'astro-icon/components';
 import { Image } from 'astro:assets';
 
 // Content
+import addition from '../assets/images/addition1.jpg';
+import construction from '../assets/images/construction2.jpg';
 import newInstall from '../assets/images/installation.jpg';
+import repair from '../assets/images/repair-2.jpg';
 import stain from '../assets/images/staining2.jpeg';
+import medallion from '../assets/images/medallion-2a.jpg';
 ---
 
 <BaseLayout>
@@ -127,7 +131,7 @@ import stain from '../assets/images/staining2.jpeg';
           class="flex items-center gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
         >
           <Image
-            src={newInstall}
+            src={addition}
             alt="New install"
             width="600"
             class="rounded-xl shadow-lg max-sm:mb-12 max-sm:scale-[1.15] sm:max-md:-mt-12 md:-ml-20 md:max-w-[50%]"
@@ -159,7 +163,7 @@ import stain from '../assets/images/staining2.jpeg';
           class="flex flex-row-reverse items-center gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
         >
           <Image
-            src={newInstall}
+            src={repair}
             alt="Hardwood floor refinishing"
             width="600"
             class="rounded-xl shadow-lg max-sm:mb-12 max-sm:scale-[1.15] sm:max-md:-mt-12 md:-mr-20 md:max-w-[50%]"
@@ -188,7 +192,7 @@ import stain from '../assets/images/staining2.jpeg';
           class="flex items-center gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
         >
           <Image
-            src={newInstall}
+            src={construction}
             alt="New install"
             width="600"
             class="rounded-xl shadow-lg max-sm:mb-12 max-sm:scale-[1.15] sm:max-md:-mt-12 md:-ml-20 md:max-w-[50%]"
@@ -218,7 +222,7 @@ import stain from '../assets/images/staining2.jpeg';
           class="flex flex-row-reverse items-center gap-12 rounded-2xl bg-white p-4 pb-12 shadow-2xl dark:bg-stone-800 max-md:flex-col max-md:items-center md:p-12"
         >
           <Image
-            src={newInstall}
+            src={medallion}
             alt="Hardwood floor refinishing"
             width="600"
             class="rounded-xl shadow-lg max-sm:mb-12 max-sm:scale-[1.15] sm:max-md:-mt-12 md:-mr-20 md:max-w-[50%]"
@@ -234,7 +238,7 @@ import stain from '../assets/images/staining2.jpeg';
             </div>
 
             <h3 class="mb-2 text-2xl font-bold dark:text-white">
-              Custom Inlays
+              Custom Medallions & Inlays
             </h3>
             <p class="text-stone-500 dark:text-stone-400">
               If you have a special decorative elements, like borders or
