Much better homepage hero

--- a/src/components/content/HomeHero.astro
+++ b/src/components/content/HomeHero.astro
@@ -4,7 +4,7 @@ import Button from '@components/ui/Button.astro';
 
 // Content
 import { getImage } from 'astro:assets';
-import kitchen from '../../assets/images/kitchen1.jpg';
+import kitchen from '../../assets/images/stairs-2.jpg';
 const optimizedBackgroundImage = await getImage({ src: kitchen, width: 1000 });
 ---
 
