--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
   >
     <a href="#main-content" class="sr-only">Skip to content</a>
     <Header />
-    <main id="#main-content" class="overflow-x-hidden max-md:p-5">
+    <main id="#main-content" class="max-md:p-5">
       <slot>
         <h1>Under construction</h1>
         <p>No content found just yet...</p>
