fix: add closing tag to logo in header

--- a/src/components/content/HomeHero2.astro
+++ b/src/components/content/HomeHero2.astro
@@ -8,9 +8,9 @@ import living from '../../assets/images/stairs-2.jpg';
 ---
 
 <section
-  class="container mx-auto mb-12 gap-20 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay dark:bg-stone-800"
+  class="dark:bg-stone-80 container mx-auto mb-12 gap-20 rounded-2xl bg-stone-200 bg-cover bg-bottom bg-blend-overlay"
 >
-  <div class="block grid-cols-12 items-center px-16 xl:grid">
+  <div class="block grid-cols-12 items-center px-8 md:px-16 xl:grid">
     <div class="col-span-5 py-20">
       <h1
         class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-stone-900 dark:text-white md:text-5xl lg:text-6xl"
