--- a/src/components/content/HomeServices2.astro
+++ b/src/components/content/HomeServices2.astro
@@ -1,56 +1,125 @@
 ---
 // Components
-import { Icon } from "astro-icon/components";
+import Button from '@components/ui/Button.astro';
+import { Icon } from 'astro-icon/components';
 ---
+
 <section class="bg-white dark:bg-stone-900">
-  <div class="py-8 px-4 mx-auto max-w-screen-xl sm:py-16 lg:px-6">
-      <div class="max-w-screen-md mb-8 lg:mb-16">
-          <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-stone-900 dark:text-white">Trusted services.</h2>
-          <p class="text-stone-500 sm:text-xl dark:text-stone-400">We've done it all, from the largest luxury homes in the city to condos and everything in between. If designers in <a href="https://springsparade.com/web/" target="_blank" rel="noreferrer noopener" class="text-red-800 underline hover:text-red-600">the Parade of Homes</a> trust us, you can too.</p>
+  <div class="mx-auto max-w-screen-xl px-4 py-8 sm:py-16 lg:px-6">
+    <div class="mb-8 max-w-screen-md lg:mb-16">
+      <h2
+        class="mb-4 text-4xl font-extrabold tracking-tight text-stone-900 dark:text-white"
+      >
+        Trusted services.
+      </h2>
+      <p class="text-stone-500 dark:text-stone-400 sm:text-xl">
+        We've done it all, from the largest luxury homes in the city to condos
+        and everything in between. If designers in <a
+          href="https://springsparade.com/web/"
+          target="_blank"
+          rel="noreferrer noopener"
+          class="text-red-800 underline hover:text-red-600"
+          >the Parade of Homes</a
+        > trust us, you can too.
+      </p>
+    </div>
+    <div
+      class="space-y-8 max-sm:text-center md:grid md:grid-cols-2 md:gap-12 md:space-y-0 lg:grid-cols-3"
+    >
+      <div>
+        <div
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+        >
+          <Icon
+            name="tabler:axe"
+            class="size-6 text-red-800 dark:text-red-300"
+          />
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">New Installs</h3>
+        <p class="text-stone-500 dark:text-stone-400">
+          Bring fresh life to your home. We'll install the material and finish
+          of your choice.
+        </p>
       </div>
-      <div class="space-y-8 md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-12 md:space-y-0 max-sm:text-center">
-          <div>
-              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
-                <Icon name="tabler:axe" class="text-red-800 dark:text-red-300 size-6"/>
-              </div>
-              <h3 class="mb-2 text-xl font-bold dark:text-white">New Installs</h3>
-              <p class="text-stone-500 dark:text-stone-400">Bring fresh life to your home. We'll install the material and finish of your choice.</p>
-          </div>
-          <div>
-              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
-                <Icon name="tabler:paint" class="text-red-800 dark:text-red-300 size-6 -ml-1"/>
-              </div>
-              <h3 class="mb-2 text-xl font-bold dark:text-white">Refinishing</h3>
-              <p class="text-stone-500 dark:text-stone-400">Whether you need a maintenance coat or a full re-sand, we can make your existing floors look good as new <u>without</u> making a huge mess.</p>
-          </div>
-          <div>
-              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
-                <Icon name="tabler:bandage" class="text-red-800 dark:text-red-300 size-6"/>
-              </div>
-              <h3 class="mb-2 text-xl font-bold dark:text-white">Repairs</h3>
-              <p class="text-stone-500 dark:text-stone-400">Water damage? Damaged pre-finished hardwood floors? We can fix your hardwood floors. You won't even know we were there.</p>
-          </div>
-          <div>
-              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
-                <Icon name="tabler:playlist-add" class="text-red-800 dark:text-red-300 size-6 -ml-1"/>
-              </div>
-              <h3 class="mb-2 text-xl font-bold dark:text-white">Additions & Extensions</h3>
-              <p class="text-stone-500 dark:text-stone-400">Want to extend your kitchen to the entire floor? We can lace-in new installs with existing, making a seamless transition from old to new.</p>
-          </div>
-          <div>
-              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
-                <Icon name="tabler:home-plus" class="text-red-800 dark:text-red-300 size-6"/>
-              </div>
-              <h3 class="mb-2 text-xl font-bold dark:text-white">New Construction</h3>
-              <p class="text-stone-500 dark:text-stone-400">We've worked with plenty of builders on new and custom homes.</p>
-          </div>
-          <div>
-              <div class="max-sm:mx-auto flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-red-100 lg:h-12 lg:w-12 dark:bg-red-900">
-                <Icon name="tabler:background" class="text-red-800 dark:text-red-300 size-6"/>
-              </div>
-              <h3 class="mb-2 text-xl font-bold dark:text-white">Custom Inlays</h3>
-              <p class="text-stone-500 dark:text-stone-400">If you have a special decorative elements, like borders or emblems, we can make that happen.</p>
-          </div>
+      <div>
+        <div
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+        >
+          <Icon
+            name="tabler:paint"
+            class="-ml-1 size-6 text-red-800 dark:text-red-300"
+          />
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">Refinishing</h3>
+        <p class="text-stone-500 dark:text-stone-400">
+          Whether you need a maintenance coat or a full re-sand, we can make
+          your existing floors look good as new <u>without</u> making a huge mess.
+        </p>
       </div>
+      <div>
+        <div
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+        >
+          <Icon
+            name="tabler:bandage"
+            class="size-6 text-red-800 dark:text-red-300"
+          />
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">Repairs</h3>
+        <p class="text-stone-500 dark:text-stone-400">
+          Water damage? Damaged pre-finished hardwood floors? We can fix your
+          hardwood floors. You won't even know we were there.
+        </p>
+      </div>
+      <div>
+        <div
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+        >
+          <Icon
+            name="tabler:playlist-add"
+            class="-ml-1 size-6 text-red-800 dark:text-red-300"
+          />
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">
+          Additions & Extensions
+        </h3>
+        <p class="text-stone-500 dark:text-stone-400">
+          Want to extend your kitchen to the entire floor? We can lace-in new
+          installs with existing, making a seamless transition from old to new.
+        </p>
+      </div>
+      <div>
+        <div
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+        >
+          <Icon
+            name="tabler:home-plus"
+            class="size-6 text-red-800 dark:text-red-300"
+          />
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">New Construction</h3>
+        <p class="text-stone-500 dark:text-stone-400">
+          We've worked with plenty of builders on new and custom homes.
+        </p>
+      </div>
+      <div>
+        <div
+          class="mb-4 flex h-10 w-10 items-center justify-center rounded-full bg-red-100 dark:bg-red-900 max-sm:mx-auto lg:h-12 lg:w-12"
+        >
+          <Icon
+            name="tabler:background"
+            class="size-6 text-red-800 dark:text-red-300"
+          />
+        </div>
+        <h3 class="mb-2 text-xl font-bold dark:text-white">Custom Inlays</h3>
+        <p class="text-stone-500 dark:text-stone-400">
+          If you have a special decorative elements, like borders or emblems, we
+          can make that happen.
+        </p>
+      </div>
+    </div>
+    <div class="mt-12 text-center">
+      <Button text="View all services" href="/services" style="white" />
+    </div>
   </div>
 </section>
