--- a/src/components/content/Gallery.astro
+++ b/src/components/content/Gallery.astro
@@ -4,111 +4,56 @@ import { Image } from 'astro:assets';
 
 // Content
 import bigLiving from '../../assets/images/big-living.jpg';
-import repairA from '../../assets/images/repair-before.png';
-import repairB from '../../assets/images/repair-during.png';
-import repairC from '../../assets/images/repair-after.png';
+import stairs1 from '../../assets/images/stairs-1.jpg';
+import teak from '../../assets/images/teak.jpg';
+import kidsBed from '../../assets/images/kids-bed-wide.jpg';
+// import repairA from '../../assets/images/repair-before.png';
+// import repairB from '../../assets/images/repair-during.png';
+// import repairC from '../../assets/images/repair-after.png';
 import stockKitchen from '../../assets/images/kitchen-1.jpg';
 import closeUp from '../../assets/images/close-up.jpg';
+import addition1 from '../../assets/images/addition1.jpg';
+// import addition2 from '../../assets/images/addition2.jpg';
+import distressed from '../../assets/images/distressed-engineered.jpg';
+import medallion1a from '../../assets/images/medallion-1.jpg';
+// import medallion1b from '../../assets/images/medallion-1b.jpg';
+// import medallion2a from '../../assets/images/medallion-2a.jpg';
+import medallion2b from '../../assets/images/medallion-2b.jpg';
+import books1 from '../../assets/images/books-1.jpg';
+import books2 from '../../assets/images/books-2.jpg';
 ---
 
-<div class="mt-16 grid grid-cols-2 gap-4 md:grid-cols-4">
-  <div class="grid gap-4">
-    <div>
-      <Image
-        src={repairA}
-        alt="Repair before"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-    <div>
-      <Image
-        src={repairB}
-        alt="Repair during"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-    <div>
-      <Image
-        src={repairC}
-        alt="Repair after"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-  </div>
-  <div class="grid gap-4">
-    <div>
-      <Image
-        src={bigLiving}
-        alt="Kitchen"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-    <div>
-      <Image
-        src={stockKitchen}
-        alt="Kitchen"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-    <div>
-      <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg"
-        alt=""
-      />
-    </div>
-  </div>
-  <div class="grid gap-4">
-    <div>
-      <Image
-        src={closeUp}
-        alt="Kitchen"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-    <div>
-      <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg"
-        alt=""
-      />
-    </div>
-    <div>
-      <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg"
-        alt=""
-      />
-    </div>
-  </div>
-  <div class="grid gap-4">
-    <div>
-      <Image
-        src={bigLiving}
-        alt="Living room wood floors"
-        width="410"
-        class="h-auto max-w-full rounded-lg"
-      />
-    </div>
-    <div>
-      <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-10.jpg"
-        alt=""
-      />
-    </div>
-    <div>
-      <img
-        class="h-auto max-w-full rounded-lg"
-        src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg"
-        alt=""
-      />
-    </div>
-  </div>
+<div class="mt-16 columns-1 gap-4 sm:columns-2 md:columns-3">
+  <Image
+    src={stairs1}
+    alt="hardwood floor stairs"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={addition1}
+    alt="Repair during"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image
+    src={distressed}
+    alt="Repair after"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
+  <Image src={teak} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={stockKitchen} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={kidsBed} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={closeUp} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={books1} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={books2} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={medallion2b} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image src={medallion1a} alt="Kitchen" width="500" class="mb-4 rounded-lg" />
+  <Image
+    src={bigLiving}
+    alt="Living room wood floors"
+    width="500"
+    class="mb-4 rounded-lg"
+  />
 </div>
